--- a/водка Drinker/водка Drinker/водка Drinker.csproj
+++ b/водка Drinker/водка Drinker/водка Drinker.csproj
@@ -83,6 +83,9 @@
   <ItemGroup>
     <None Include="Resources\russian-vodka-beluga.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Shop Window for Game.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
