--- a/водка Drinker/водка Drinker/водка Drinker.csproj
+++ b/водка Drinker/водка Drinker/водка Drinker.csproj
@@ -54,6 +54,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TutorialWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TutorialWindow.Designer.cs">
+      <DependentUpon>TutorialWindow.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -67,6 +73,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="TutorialWindow.resx">
+      <DependentUpon>TutorialWindow.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -85,6 +94,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Shop Window for Game.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Vodka Clicker.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
